# RobotChessPlayer

./: .gitignore  README.md  pyproject.toml  requirements.txt
chess_arm/: __init__.py
chess_arm/chess/: engine_interface.py  move_mapping.py
chess_arm/control/: controllers.py  ik.py  motion_planner.py  trajectory_generator.py
chess_arm/perception/: board_tracker.py  vision_sim.py
chess_arm/ros/: ros_bridge.py
chess_arm/sim/: board_env.py  digital_twin.py  isaac_utils.py
chess_arm/utils/: logging_utils.py  transforms.py
config/: board_config.yaml  camera_config.yaml  ros_topics.yaml  sim_params.yaml
ros/: CMakeLists.txt  package.xml
ros/launch/: chess_arm_bringup.launch.py
scripts/: launch_isaac_chess_env.py  ros_bridge_main.py  run_chess_match_demo.py  run_single_move_demo.py  spawn_franka_with_board.py
tests/: test_move_mapping.py  test_trajectory_generator.py  test_transforms.py
